[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Curt Gilbert",email = "cgilbertut@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
